feat: create customer and tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
 	},
 	"plugins": ["@typescript-eslint"],
 	"rules": {
-		"indent": ["error", "tab"],
+		"indent": ["off"],
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"]
